fix code block line wrapping

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -59,9 +59,8 @@ blockquote {
   }
 }
 code {
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  word-break: break-all;
+  max-width: 100%;
+  overflow-x: auto;
 }
 h1,h2,h3,h4,h5{
   font-family: inherit;
